# irving

./: .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
programs/: 001_state_and_actions.ivy  002_safety_and_invariants.ivy  003_modules.ivy  004_loops.ivy  005_isolate_and_mixins.ivy  100_append.ivy  101_append2.ivy  102_counter.ivy  200_chainrep.ivy  200_trivial-chainrep.ivy  201_vector.ivy  202_pingpong.ivy  203_linear_chainrep.ivy  300_noninf1.ivy
src/: ast.rs  cli.rs  io.rs  lib.rs  main.rs  parser.rs  rewriter.rs
src/ast/: actions.rs  declarations.rs  expressions.rs  logic.rs  mod.rs  pprint.rs  span.rs  statements.rs  toplevels.rs  visitor.rs
src/error/: mod.rs
src/extraction/: ivy.rs  mod.rs  pprint.rs  vmt.rs
src/extraction/java/: actions.rs  arithmetic.rs  classes.rs  extraction.rs  mod.rs  statements.rs  types.rs
src/grammars/: lexer.pest  syntax.pest
src/parser/: expressions.rs  ivy.rs  logic.rs  mod.rs
src/parser/grammars/: lexer.pest  logic.pest  syntax.pest
src/passes/: clone_emitter.rs  constant_fold.rs  global_lowerer.rs  include_expander.rs  isolate_normalizer.rs  mod.rs  module_instantiation.rs  module_normalizer.rs  pprint.rs  quantifier_bounds.rs
src/stdlib/: mod.rs
src/tests/: mod.rs  parser.rs  pprint.rs  programs.rs  stdlib.rs
src/typechecker/: inference.rs  mixin_resolution.rs  mod.rs  programs.rs  sorts.rs  subst.rs  unifier.rs
src/visitor/: ast.rs  constant_fold.rs  control.rs  global_lowerer.rs  mod.rs  pprint.rs  pprint_v2.rs  sort.rs  visitor.rs  visitor_v2.rs
(+44 files in other folders)
