[package]
name = "irving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.11", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.19"
pest = "2.6.0"
pest_derive = "2.6.0"
pest_consume = "1.1.3"
thiserror = "1.0.40"
env_logger = "0.10.0"
annotate-snippets = "0.9.1"

[dev-dependencies]
ctor = "0.2.4"
